Add first state property and create props interface

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -34,3 +34,12 @@
   transition: 0.2s all;
   box-shadow: 0 0 10px black;
 }
+
+.input_submit:hover {
+  background-color: rgb(174, 118, 227);
+}
+
+.input_submit:active {
+  transform: scale(0.8);
+  box-shadow: 0 0 5px black;
+}
