--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -50,3 +50,40 @@
   width: 90%;
   flex-wrap: wrap;
 }
+
+.single_todo {
+  display: flex;
+  width: 29.5%;
+  border-radius: 5px;
+  padding: 20px;
+  margin-top: 15px;
+  background-color: aqua;
+}
+
+.single_todo--text {
+  flex: 1;
+  padding: 5px;
+  border: none;
+  font-size: 20px;
+}
+
+
+@media (max-width: 700px) {
+  .input {
+    width: 95%;
+  }   
+  
+  .todos {
+    width: 95%;
+  }
+
+  .single_todo {
+    width: 100%;
+  }
+}
+
+@media (max-width: 1200px) {
+  .single_todo {
+    width: 40%;
+  }
+}
