--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -67,6 +67,16 @@
   font-size: 20px;
 }
 
+.single_todo--text:focus {
+  outline: none;
+}
+
+.icon {
+  margin-left: 10px;
+  font-size: 25px;
+  cursor: pointer;
+}
+
 
 @media (max-width: 700px) {
   .input {
